hphp/test/zend/good/tests/classes/clone_005.php.expectf

Fatal error: Cannot override final method base::__clone() in %s/clone_005.php on line 9
